--- a/SixtChat/Base.lproj/Main.storyboard
+++ b/SixtChat/Base.lproj/Main.storyboard
@@ -1,24 +1,106 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="ouh-Dr-nZa">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Agent-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="SixtChat" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Say 'Hello' to your Help Agent" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BOa-bE-cd3">
+                                <rect key="frame" x="18" y="101" width="226.5" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="SNW-pZ-Si0">
+                                <rect key="frame" x="16" y="301.5" width="343" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YNt-hz-zJ0">
+                                <rect key="frame" x="281" y="339.5" width="76" height="38"/>
+                                <color key="backgroundColor" red="1" green="0.57637232540000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <inset key="contentEdgeInsets" minX="20" minY="10" maxX="20" maxY="10"/>
+                                <state key="normal" title="Send">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <connections>
+                                    <action selector="sendButtonPressed" destination="BYZ-38-t0r" eventType="touchUpInside" id="6FA-1i-804"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalCompressionResistancePriority="1000" verticalCompressionResistancePriority="1000" text="👩🏻💬" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4AA-jV-Y8W">
+                                <rect key="frame" x="18" y="151.5" width="46" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" text="text" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FO1-YT-aK0">
+                                <rect key="frame" x="72" y="152" width="29" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="SNW-pZ-Si0" secondAttribute="trailing" constant="16" id="368-tW-cKR"/>
+                            <constraint firstItem="BOa-bE-cd3" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="18" id="5wM-vO-tbK"/>
+                            <constraint firstItem="BOa-bE-cd3" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="37" id="Bq2-Dt-5ml"/>
+                            <constraint firstItem="YNt-hz-zJ0" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="20" symbolic="YES" id="D42-fH-quN"/>
+                            <constraint firstItem="YNt-hz-zJ0" firstAttribute="top" secondItem="SNW-pZ-Si0" secondAttribute="bottom" constant="8" id="GAC-dO-IlA"/>
+                            <constraint firstItem="FO1-YT-aK0" firstAttribute="top" secondItem="4AA-jV-Y8W" secondAttribute="top" id="M9m-ds-9a8"/>
+                            <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="BOa-bE-cd3" secondAttribute="trailing" constant="20" symbolic="YES" id="TTF-RE-Ick"/>
+                            <constraint firstItem="FO1-YT-aK0" firstAttribute="leading" secondItem="4AA-jV-Y8W" secondAttribute="trailing" constant="8" id="dQE-qF-CPs"/>
+                            <constraint firstItem="4AA-jV-Y8W" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="18" id="g9A-Oi-6pv"/>
+                            <constraint firstItem="SNW-pZ-Si0" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="i3y-Fk-NuX"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="FO1-YT-aK0" secondAttribute="trailing" constant="20" id="k0S-Q6-cOp"/>
+                            <constraint firstItem="YNt-hz-zJ0" firstAttribute="trailing" secondItem="SNW-pZ-Si0" secondAttribute="trailing" constant="-2" id="wMf-Mv-Mps"/>
+                            <constraint firstItem="4AA-jV-Y8W" firstAttribute="top" secondItem="BOa-bE-cd3" secondAttribute="bottom" constant="30" id="zeD-V7-Yy6"/>
+                            <constraint firstItem="SNW-pZ-Si0" firstAttribute="top" secondItem="BOa-bE-cd3" secondAttribute="bottom" constant="180" id="zlO-7I-tlv"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <navigationItem key="navigationItem" title="Agent" id="qjd-eb-A89"/>
+                    <connections>
+                        <outlet property="greetingLabel" destination="BOa-bE-cd3" id="kU0-YS-9Cd"/>
+                        <outlet property="responseTextLabel" destination="FO1-YT-aK0" id="CsM-52-pf6"/>
+                        <outlet property="textField" destination="SNW-pZ-Si0" id="4rO-qB-Eut"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="456.80000000000001" y="118.29085457271366"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="mi4-A6-9eR">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="ouh-Dr-nZa" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="w2u-Zm-99M">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="mnF-2M-pdI"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="U5G-qk-M0F" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-271" y="118"/>
         </scene>
     </scenes>
 </document>
